# stonex-logger-wrapper

./: CMakeLists.txt  NOTICE  README.md  build_all.bat  conanfile.py
stonex-logger-wrapper-app/: CMakeLists.txt  logger.xml
stonex-logger-wrapper-app/include/: main.h
stonex-logger-wrapper-app/src/: main.cpp
stonex-logger-wrapper-benchmark/: CMakeLists.txt
stonex-logger-wrapper-benchmark/src/: main.cpp
stonex-logger-wrapper-lib/: CMakeLists.txt
stonex-logger-wrapper-lib/config/: logger.config  logger.properties  logger.xml
stonex-logger-wrapper-lib/include/Log4CxxLogger/: Log4CxxLogger.h
stonex-logger-wrapper-lib/include/LoggerFactory/: LoggerFactory.h
stonex-logger-wrapper-lib/include/SpdLogLogger/: SpdLogLogger.h
stonex-logger-wrapper-lib/include/StdOutLogger/: StdOutLogger.h
stonex-logger-wrapper-lib/include/logger/: StoneXLogger.h  StonexLogSource.h  logger_config.h
stonex-logger-wrapper-lib/src/: main.cpp
stonex-logger-wrapper-lib/src/Log4CxxLogger/: Log4CxxLogger.cpp
stonex-logger-wrapper-lib/src/LoggerFactory/: LoggerFactory.cpp
stonex-logger-wrapper-lib/src/SpdLogLogger/: SpdLogLogger.cpp
stonex-logger-wrapper-lib/src/StdOutLogger/: StdOutLogger.cpp
stonex-logger-wrapper-lib/src/logger/: StoneXLogger.cpp  StonexLogSource.cpp
